<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_cities">Pick city</string>
    <string name="title_add_city">Add city</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="city_country">%1$s, %2$s</string>
    <string name="degree">%1$d\u00B0</string>
    <string name="degree_range">%1$d\u00B0 / %2$d\u00B0</string>
    <string name="toolbar_text">%1$s %2$d\u00B0</string>

    <string name="text_data_are_outdated">The data are outdated</string>
    <string name="text_details">Details</string>
    <string name="text_humidity">Humidity:&#160;</string>
    <string name="text_cloudiness">Cloudiness:&#160;</string>
    <string name="text_wind">Wind:&#160;</string>
    <string name="text_pressure">Pressure:&#160;</string>

    <string name="text_humidity_value">%1$d%%</string>
    <string name="text_cloudiness_value">%1$d%%</string>
    <string name="text_wind_value">%1$dm/s (%2$s)</string>
    <string name="text_pressure_value">%1$dhPa</string>

    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>

    <string name="search">Search</string>
    <string name="type_city">Type city name</string>
    <string name="nothing_has_been_found">Nothing has been found</string>
    <string name="manage_locations">Manage locations</string>
    <string name="no_cities">No cities found</string>
    <string name="delete_city_warning">Do you really want to delete the city?</string>
    <string name="delete_city">Delete city</string>
    <string name="unknown_error">Something went wrong</string>
    <string name="connection_error">Can\'t connect to the server</string>
</resources>
