<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_default">

    <android.support.v7.widget.SearchView
        android:id="@+id/act_find_city_et_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_half_default"

        android:hint="@string/type_city"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/act_find_city_btn_search"
        />

    <Button
        android:id="@+id/act_find_city_btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/act_find_city_et_city"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/act_find_city_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_half_default"
        app:layout_constraintTop_toBottomOf="@id/act_find_city_et_city"
        />

    <TextView
        android:id="@+id/act_find_city_tv_empty_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nothing_has_been_found"
        android:visibility="gone"

        style="@style/TextViewEmptyState"

        app:layout_constraintTop_toBottomOf="@id/act_find_city_et_city"
        app:layout_constraintBottom_toBottomOf="parent"

        tools:visibility="visible"
        />

</android.support.constraint.ConstraintLayout>