<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_half_default"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:paddingStart="@dimen/spacing_default"
            android:paddingEnd="@dimen/spacing_default"
            android:textSize="16sp"
            style="@style/TextViewStyle.Value"
            android:text="@string/text_details"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            style="@style/separator"
            />

        <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingStart="@dimen/spacing_default"
            android:paddingEnd="@dimen/spacing_default"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    style="@style/TextViewStyle.Key"
                    android:text="@string/text_humidity"
                    />

            <TextView
                android:id="@+id/tv_humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toEndOf="@id/tv_humidity"
                app:layout_constraintTop_toTopOf="parent"

                style="@style/TextViewStyle.Value"
                tools:text="60%"
                />

            <TextView
                android:id="@+id/tv_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toStartOf="@id/tv_pressure_value"
                app:layout_constraintTop_toTopOf="parent"

                style="@style/TextViewStyle.Key"
                android:text="@string/text_pressure"
                />

            <TextView
                android:id="@+id/tv_pressure_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextViewStyle.Value"
                tools:text="900hPa"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                app:layout_constraintTop_toBottomOf="@id/tv_humidity"
                style="@style/separator"
                />

            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_humidity"

                style="@style/TextViewStyle.Key"
                android:text="@string/text_wind"
                />

            <TextView
                android:id="@+id/tv_wind_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_wind"
                app:layout_constraintTop_toBottomOf="@id/tv_humidity"

                style="@style/TextViewStyle.Value"
                tools:text="3 m/s (SW)"
                />

            <TextView
                android:id="@+id/tv_cloudiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_cloudiness_value"
                app:layout_constraintTop_toBottomOf="@id/tv_humidity"
                style="@style/TextViewStyle.Key"
                android:text="@string/text_cloudiness"
                />

            <TextView
                android:id="@+id/tv_cloudiness_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_humidity"
                style="@style/TextViewStyle.Value"
                tools:text="10%"
                />

         </android.support.constraint.ConstraintLayout>

        <ProgressBar
            android:id="@+id/pb_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            />

    </LinearLayout>
</android.support.v7.widget.CardView>

    <!--
        private Integer windSpeed;
        private Integer windDirectionInDegrees;
        private Integer cloudiness;
        private Integer rainVolume;
        private Integer snowVolume;
        private Date timeOfDataCalculation;
        private City city;
    -->
